Fixed terminal layout issue, fixed packages building issue

--- a/src/main/webapp/css/ajaxterm.css
+++ b/src/main/webapp/css/ajaxterm.css
@@ -32,6 +32,9 @@ The above copyright notice and this licensing notice shall be included in all co
 Software.
 */
 
+.ajaxterm {
+	overflow-x: auto;
+}
 
 .ajaxterm:focus {
 	outline: none;
